--- a/6_6_Swarm_optimization.ipynb
+++ b/6_6_Swarm_optimization.ipynb
@@ -9,7 +9,26 @@
     "\n",
     "![](https://upload.wikimedia.org/wikipedia/commons/e/ec/ParticleSwarmArrowsAnimation.gif)\n",
     "\n",
-    "![](https://www.researchgate.net/publication/333314611/figure/fig2/AS:761735870939136@1558623392061/The-Particle-Swarm-Optimization-PSO-algorithm.png)"
+    "![](https://www.researchgate.net/publication/333314611/figure/fig2/AS:761735870939136@1558623392061/The-Particle-Swarm-Optimization-PSO-algorithm.png)\n",
+    "\n",
+    "\n",
+    "El algoritmo de optimización de enjambre, también conocido como algoritmo de optimización de colonias de hormigas, es un método de búsqueda inspirado en el comportamiento colectivo de los insectos sociales, como las hormigas. A continuación, te presento una breve lista que describe las características principales de este algoritmo:\n",
+    "\n",
+    "   1. Inicialización: Se crea un conjunto de soluciones iniciales aleatorias, también conocidas como \"hormigas virtuales\".\n",
+    "\n",
+    "   2. Evaluación: Cada solución es evaluada utilizando una función objetivo que determina su calidad en relación con el problema que se está abordando.\n",
+    "\n",
+    "   3. Actualización local: Las soluciones individuales ajustan su comportamiento según las mejores soluciones locales encontradas por las hormigas cercanas.\n",
+    "\n",
+    "   4. Movimiento: Las soluciones se desplazan en el espacio de búsqueda utilizando una regla de transición basada en probabilidades. Las hormigas virtuales siguen rastros de feromonas, que se depositan y evaporan en el entorno.\n",
+    "\n",
+    "   5. Actualización global: Se actualizan los rastros de feromonas de acuerdo con la calidad de las soluciones encontradas. Las mejores soluciones tienen una influencia mayor en la actualización de los rastros.\n",
+    "\n",
+    "   6. Iteración: Los pasos 3 a 5 se repiten hasta que se cumple un criterio de terminación, como un número máximo de iteraciones o la convergencia de las soluciones.\n",
+    "\n",
+    "   7.  Explotación y exploración: El algoritmo combina la explotación de las mejores soluciones conocidas con la exploración de nuevas regiones del espacio de búsqueda, permitiendo la búsqueda de soluciones óptimas globales.\n",
+    "\n",
+    "   8. Convergencia: El algoritmo converge hacia una o varias soluciones óptimas a medida que las hormigas virtuales intercambian información y encuentran mejores soluciones a lo largo de las iteraciones."
    ]
   },
   {
@@ -252,13 +271,7 @@
       "pyswarms.single.global_best:   0%|                    |0/1000, best_cost=4.15e-8\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:   0%|                    |0/1000, best_cost=4.15e-8\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "pyswarms.single.global_best:   0%|                    |0/1000, best_cost=4.15e-8\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:   0%|                    |0/1000, best_cost=4.15e-8\u001b[A\u001b[A\n",
@@ -636,13 +649,7 @@
       "pyswarms.single.global_best:  26%|████▊             |264/1000, best_cost=1.8e-14\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  26%|████▊             |264/1000, best_cost=1.8e-14\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "pyswarms.single.global_best:  26%|████▊             |264/1000, best_cost=1.8e-14\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  26%|████▊             |264/1000, best_cost=1.8e-14\u001b[A\u001b[A\n",
@@ -1020,13 +1027,7 @@
       "pyswarms.single.global_best:  36%|██████           |358/1000, best_cost=2.76e-22\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  36%|██████           |358/1000, best_cost=2.76e-22\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "pyswarms.single.global_best:  46%|███████▊         |458/1000, best_cost=2.76e-22\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  46%|███████▊         |458/1000, best_cost=2.76e-22\u001b[A\u001b[A\n",
@@ -1404,13 +1405,7 @@
       "pyswarms.single.global_best:  56%|█████████▍       |556/1000, best_cost=1.26e-29\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  56%|█████████▍       |556/1000, best_cost=1.26e-29\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "pyswarms.single.global_best:  56%|█████████▍       |556/1000, best_cost=1.26e-29\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  56%|█████████▍       |556/1000, best_cost=1.26e-29\u001b[A\u001b[A\n",
@@ -1788,13 +1783,7 @@
       "pyswarms.single.global_best:  75%|████████████▋    |747/1000, best_cost=2.35e-36\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  75%|████████████▋    |747/1000, best_cost=7.13e-38\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "pyswarms.single.global_best:  75%|████████████▋    |747/1000, best_cost=7.13e-38\u001b[A\u001b[A\n",
       "\n",
       "pyswarms.single.global_best:  75%|████████████▋    |747/1000, best_cost=7.13e-38\u001b[A\u001b[A\n",
